* Changed title of save dialog box from "Open Project" to "Save Project"
  This closes FS#18.
* Fixed xrc generation of static bitmap using patch supplied by henrique.
  This closes FS#16
* Added subclassing on forms. This closes FS#21.
+ Added center property for wxDialog. This closes FS#17.
+ Individual directoryies for each plug-in.
+ Toolbar seperators. This closes FS#11.
^ Premake script for sdk projects.
^ Renamed contrib to wxAddition plug-in.
~ Plugin directory out of src.
~ wxAdditions plug-in to the wxAdditions repository.
^ Palette now remembers tab order.

09-13-2006 Version 2.00.75
+ Added subclass and user_headers properties. This closes FS#5.

09-07-2006 Version 2.00.74
* Fixed behaviour of wxSize and wxPoint properties when NumLock was
  on (and possibly others).

08-28-2006  Version 2.00.73
^ File size for wxAdditions in the wxFormBuilder installer.
* Fixed behaviour of wxSizer::Fit(). This fixes FS#9

08-25-2006  Version 2.00.72
+ Replaced wxPlot with wxPlotCtrl
^ Made checkbox the default for boolean properties.
* Fixed xrc generation for bitmap properties (bug FS#4)
^ Automatic linking to wxAdditions is now done through a 
  header distributed with wxAddtions, this is now independent 
  of the version of wxWidgets.
- Removed project option for wxWidgets Version.

08-18-2006  Version 2.00.71
+ Added a new project option for wxWidgets Version. 
  Currently it can be 2.7+ and 2.6+.
+ Added support for wxWidgets v2.7.0 for code generation.

08-15-2006  Version 2.00.70
* Fixed the background colour of wxPanel.
* Fixed bitmap behavior on menu items.
+ Added wxScintilla shortcuts (Ctrl-C, Ctrl-V, Ctrl-X).
+ Added "Default" in the wxPropertyGrid colour selector 
  (some controls don't have the BtnFace colour by default).
+ Added the properties checked and style to wxCheckBox.
^ Set the default background color of wxFlatNotebook to ButtonFace.
^ Updated wxFB's URL in the generated C++ code.

08-03-2006  Version 2.00.69