@@ -12,11 +12,12 @@ date Version 2.00.76 (3.0 Beta 1)
 + Added center property for wxDialog. This closes FS#17.
 + Individual directoryies for each plug-in.
 + Toolbar seperators. This closes FS#11.
++ Possiblity to group plugin components with toolbar separators.
 ^ Premake script for sdk projects.
 ^ Renamed contrib to wxAddition plug-in.
+^ Palette now remembers tab order.
 ~ Plugin directory out of src.
 ~ wxAdditions plug-in to the wxAdditions repository.
-^ Palette now remembers tab order.
 
 09-13-2006 Version 2.00.75
 + Added subclass and user_headers properties. This closes FS#5.
